--- a/_includes/table_of_contents.html
+++ b/_includes/table_of_contents.html
@@ -1,29 +1,89 @@
 {% assign chapter_titles = "Artificial Intelligence|Computational Biology|Computation Graphics|Human Computer Interaction|Software Engineering|Software Projects|Profiles" | split: "|" %}
 
-<h5>Table of Contents</h5>
-<div class="row">
-  <div class="marginless-col col s12 m4 l3">
-    <div class="marginless-collection collection">
-      <a href="#" class="collection-item">
-        <span class="toc-enum">Foreword</span></br>
-        <span class="toc-title">Title of Foreword</span>
-      </a>
+<h5>RUCS</h5>
+<div class="height-fix">
+  <div class="row cyan darken-2">
+    <div class="marginless-col col m4 l3 hide-on-small-and-down">
+      <div class="marginless-collection collection">
+<!--         <a href="#foreword" class="collection-item active">
+          <span class="toc-enum">Foreword</span></br>
+        </a> -->
 
-      {% for chapter in chapter_titles %}
-      <a href="#" class="collection-item">
-        <span class="toc-enum">Chapter {{ forloop.index }}</span></br>
-        <span class="toc-title">{{ chapter }}</span>
-      </a>
+        {% for chapter in site.categories %}
 
-      {% endfor %}
+        <a href="#{{ chapter[0] | replace: ' ', '-' }}" class="collection-item">
+          <span class="toc-enum">Chapter {{ forloop.index }}</span></br>
+          <span class="toc-title">{{ chapter[0] | capitalize }}</span>
+        </a>
 
+        {% endfor %}
+
+      </div>
     </div>
-  </div>
 
-  <div class="marginless-col col s12 m8 l9">
-    <div class="toc-content">
-      <div class="marginless-card-panel cyan darken-2">
-        <span class="white-text">This is the foreword.</span>
+    <div class="marginless-col col s12 hide-on-med-and-up show-on-small">
+      <ul class="collapsible" data-collapsible="accordion">
+<!--         <li>
+          <div class="collapsible-header">Foreword</div>
+          <div class="collapsible-body"><p>This is the foreword.</p></div>
+        </li> -->
+
+        {% for chapter in site.categories %}
+
+        <li>
+          <div class="collapsible-header">{{ chapter[0] }}</div>
+          <div class="collapsible-body"></div>
+        </li>
+
+        {% endfor %}
+      </ul>
+    </div>
+        
+
+  <!--     <div class="marginless-collection collection">
+        <a href="#foreword" class="collection-item active">
+          <span class="toc-enum">Foreword</span></br>
+        </a>
+
+        {% for chapter in site.categories %}
+
+        <a href="#{{ chapter[0] | replace: ' ', '-' }}" class="collection-item">
+          <span class="toc-enum">Chapter {{ forloop.index }}</span></br>
+          <span class="toc-title">{{ chapter[0] | capitalize }}</span>
+        </a>
+
+        {% endfor %} -->
+
+    <div class="marginless-col col s12 m8 l9 height-fix" style="height:413px; overflow: scroll" id="toc-content-wrapper">
+      <div class="toc-content height-fix" id="toc-content">
+        <div class="toc-chapter-content" id="foreword">
+          <div class="col m12">
+            <div class="marginless-card-panel cyan darken-2">
+              <span class="white-text">This is the foreword.</span>
+            </div>
+          </div>
+        </div>
+
+        {% for chapter in site.categories %}
+        <div class="toc-chapter-content" id="{{ chapter[0] | replace: ' ', '-' }}">
+          {% for abstracts in chapter %}
+          {% if forloop.first == false %}
+          {% for abstract in abstracts %}
+          <div class="col m12 l6">
+            <a href='{{ abstract.url }}' class="white-text">
+            <div class="marginless-card-panel cyan darken-2">
+              <span class="white-text">{{ abstract.title }}</span><br/>
+              <span class="white-text">{{ abstract.author }}</span><br/>
+              <p class="white-text">{{ abstract.content | strip_html | truncatewords: 20 }}
+              </p>
+            </div>
+            </a>
+          </div>
+          {% endfor %}
+          {% endif %}
+          {% endfor %}
+        </div>
+        {% endfor %}
       </div>
     </div>
   </div>
