--- a/_layouts/no_header.html
+++ b/_layouts/no_header.html
@@ -11,8 +11,9 @@
 
     <!--  Scripts-->
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script src="../../dist/js/materialize.js"></script>
-    <script src="js/init.js"></script>
+    <script src="/RUCS-Web/js/materialize.js"></script>
+    <script src="/RUCS-Web/js/init.js"></script>
+    <script src="/RUCS-Web/js/index.js"></script>
   </body>
 
 </html>
