--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,21 +1,17 @@
 ---
 layout: default
 ---
-	<div class="row">
-		<div class="post col l10 m11 s12">
-			<div class="container">
-			  <header class="post-header">
-			    <h1 class="post-title">{{ page.title }}</h1>
-			    <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
-			  </header>
+<div class="container">
+<a href="{{ site.baseurl }}/#table-of-contents" class="waves-effect waves-cyan btn-large darken-2">Back</a>
+  <header class="post-header">
+    <h1 class="post-title">{{ page.title }}</h1>
+    <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
+  </header>
 
-			  <article class="post-content">
-			    {{ content }}
-			  </article>
-			</div>
-		</div>
+  <article class="post-content">
+    {{ content }}
+  </article>
 
-		<div class="col l2 m1 s12">
-			<a href="{{ site.baseurl }}/"class="waves-effect waves-cyan btn-large darken-2">Back</a>
-		</div>
-	</div>
+
+<a href="{{ site.baseurl }}/#table-of-contents" class="waves-effect waves-cyan btn-large darken-2">Back</a>
+</div>
