--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,6 +26,6 @@
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="/RUCS-Web/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <link href="/RUCS-Web/css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="{{ site.baseurl }}/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="{{ site.baseurl }}/css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
