--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,8 +13,8 @@
 
     <!--  Scripts-->
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script src="/RUCS-Web/js/materialize.js"></script>
-    <script src="/RUCS-Web/js/init.js"></script>
+    <script src="{{ site.baseurl }}/js/materialize.js"></script>
+    <script src="{{ site.baseurl }}/js/init.js"></script>
 
   </body>
 
