--- a/_includes/table_of_contents.html
+++ b/_includes/table_of_contents.html
@@ -5,16 +5,24 @@
   <div class="row cyan darken-2">
     <div class="marginless-col col m4 l3 hide-on-small-and-down">
       <div class="marginless-collection collection">
-<!--         <a href="#foreword" class="collection-item active">
-          <span class="toc-enum">Foreword</span></br>
-        </a> -->
 
         {% for chapter in site.categories %}
 
-        <a href="#{{ chapter[0] | replace: ' ', '-' }}" class="collection-item">
+        {% if forloop.first == true %}
+
+        <a href="#{{ chapter[0] | replace: ' ', '-' }}" class="waves-effect waves-light collection-item active">
           <span class="toc-enum">Chapter {{ forloop.index }}</span></br>
           <span class="toc-title">{{ chapter[0] | capitalize }}</span>
         </a>
+
+        {% else %}
+
+        <a href="#{{ chapter[0] | replace: ' ', '-' }}" class="waves-effect waves-light collection-item">
+          <span class="toc-enum">Chapter {{ forloop.index }}</span></br>
+          <span class="toc-title">{{ chapter[0] | capitalize }}</span>
+        </a>
+
+        {% endif %}
 
         {% endfor %}
 
@@ -23,67 +31,121 @@
 
     <div class="marginless-col col s12 hide-on-med-and-up show-on-small">
       <ul class="collapsible" data-collapsible="accordion">
-<!--         <li>
-          <div class="collapsible-header">Foreword</div>
-          <div class="collapsible-body"><p>This is the foreword.</p></div>
-        </li> -->
 
         {% for chapter in site.categories %}
+          {% if forloop.first == true %}
+            <li>
+              <div class="collapsible-header active">{{ chapter[0] }}</div>
+              <div class="collapsible-body"></div>
+            </li>
 
-        <li>
-          <div class="collapsible-header">{{ chapter[0] }}</div>
-          <div class="collapsible-body"></div>
-        </li>
-
+          {% else %}
+            <li>
+              <div class="collapsible-header">{{ chapter[0] }}</div>
+              <div class="collapsible-body"></div>
+            </li>
+          {% endif %}
         {% endfor %}
       </ul>
     </div>
-        
-
-  <!--     <div class="marginless-collection collection">
-        <a href="#foreword" class="collection-item active">
-          <span class="toc-enum">Foreword</span></br>
-        </a>
-
-        {% for chapter in site.categories %}
-
-        <a href="#{{ chapter[0] | replace: ' ', '-' }}" class="collection-item">
-          <span class="toc-enum">Chapter {{ forloop.index }}</span></br>
-          <span class="toc-title">{{ chapter[0] | capitalize }}</span>
-        </a>
-
-        {% endfor %} -->
 
     <div class="marginless-col col s12 m8 l9 height-fix" style="height:413px; overflow: scroll" id="toc-content-wrapper">
       <div class="toc-content height-fix" id="toc-content">
-        <div class="toc-chapter-content" id="foreword">
-          <div class="col m12">
-            <div class="marginless-card-panel cyan darken-2">
-              <span class="white-text">This is the foreword.</span>
-            </div>
-          </div>
-        </div>
 
         {% for chapter in site.categories %}
-        <div class="toc-chapter-content" id="{{ chapter[0] | replace: ' ', '-' }}">
-          {% for abstracts in chapter %}
-          {% if forloop.first == false %}
-          {% for abstract in abstracts %}
-          <div class="col m12 l6">
-            <a href='{{ site.baseurl }}{{ abstract.url }}' class="white-text">
-            <div class="marginless-card-panel cyan darken-2">
-              <span class="white-text">{{ abstract.title }}</span><br/>
-              <span class="white-text">{{ abstract.author }}</span><br/>
-              <p class="white-text">{{ abstract.content | strip_html | truncatewords: 20 }}
-              </p>
-            </div>
-            </a>
+          <div class="toc-chapter-content" id="{{ chapter[0] | replace: ' ', '-' }}">
+            {% for abstracts in chapter %}
+              {% if forloop.first == false %}
+                {% if abstracts.size == 1 %}
+                  {% for abstract in abstracts %}
+                    <div class="marginless-col col s12">
+
+                      {% include marginless_card_panel.html %}
+
+                    </div>     
+                  {% endfor %}               
+                {% elsif abstracts.size == 2 %}
+                  {% for abstract in abstracts %}
+                    {% if forloop.last == false %}
+                      <div class="marginless-col col s12 m6">
+                        
+                        {% include marginless_card_panel.html %}
+
+                      </div>
+                    {% else %}
+                      <div class="marginless-col col s12 m6">
+                        
+                        {% include marginless_card_panel.html %}
+
+                      </div>
+                    {% endif %}
+                  {% endfor %}
+                {% elsif abstracts.size == 3 %}
+                  {% for abstract in abstracts %}
+                    {% if forloop.index == 1 %}
+                      <div class="marginless-col col s12">
+                        
+                        {% include marginless_card_panel.html %}
+
+                      </div>
+                    {% else %}
+                      <div class="marginless-col col s12 m6">
+                        
+                        {% include marginless_card_panel.html %}
+
+                      </div>
+                    {% endif %}
+                  {% endfor %}
+                {% else %}
+                  {% assign modulo = {{ abstracts | size | modulo:2 }} %}
+                  {% if modulo == 0 %}
+                    {% for abstract in abstracts %}
+                      <div class="marginless-col col s12 m6">
+                        
+                        {% include marginless_card_panel.html %}
+
+                      </div>
+                    {% endfor %}
+                  {% else %}
+                    {% for abstract in abstracts %}
+                      {% if forloop.first == true %}
+                        <div class="marginless-col col s12">
+                          {% include marginless_card_panel.html %}
+                        </div>
+                      {% else %}
+                        <div class="marginless-col col s12 m6">
+                          {% include marginless_card_panel.html %}
+                        </div>
+                      {% endif %}
+                    {% endfor %}
+                  {% endif %}
+                {% endif %}
+              {% endif %}
+            {% endfor %}
           </div>
-          {% endfor %}
-          {% endif %}
-          {% endfor %}
-        </div>
         {% endfor %}
+        <!--
+          {% for chapter in site.categories %}
+            <div class="toc-chapter-content" id="{{ chapter[0] | replace: ' ', '-' }}">
+              {% for abstracts in chapter %}
+                {% if forloop.first == false %}
+                  {% for abstract in abstracts %}
+                      <div class="col s12 m6">
+                        <a href='{{ site.baseurl }}{{ abstract.url }}' class="white-text">
+                          <div class="marginless-card-panel cyan darken-2">
+                            <span class="white-text">{{ abstract.title }}</span><br/>
+                            <span class="white-text">{{ abstract.author }}</span><br/>
+                            <p class="white-text">{{ abstract.content | strip_html | truncatewords: 20 }}
+                            </p>
+                          </div>
+                        </a>
+                      </div>
+                  {% endfor %}
+                {% endif %}
+              {% endfor %}
+            </div>
+          {% endfor %}
+        -->
       </div>
     </div>
   </div>
