TODO: cards interactivity, cards layout, posts layout, FB share

--- a/css/materialize.css
+++ b/css/materialize.css
@@ -2177,7 +2177,7 @@ ul.staggered-list li {
 footer.page-footer {
   margin-top: 20px;
   padding-top: 20px;
-  background-color: #ee6e73; }
+  background: url(../resources/backgroundweb.svg) }
   footer.page-footer .footer-copyright {
     overflow: hidden;
     height: 50px;
@@ -2313,8 +2313,9 @@ td, th {
     .collection .collection-item:last-child {
       border-bottom: none; }
     .collection .collection-item.active {
-      background-color: #26a69a;
-      color: #eafaf9; }
+      background-color: white;
+      color: #0097a7;
+      border-right: 4px solid #0097a7; }
       .collection .collection-item.active .secondary-content {
         color: #fff; }
   .collection a.collection-item {
@@ -2324,7 +2325,7 @@ td, th {
     -o-transition: 0.25s;
     -ms-transition: 0.25s;
     transition: 0.25s;
-    color: #26a69a; }
+    color: #0097a7; }
     .collection a.collection-item:not(.active):hover {
       background-color: #ddd; }
   .collection.with-header .collection-header {
