--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,8 @@
 ---
 layout: default
 ---
-<div class="container">
+<div class="container post-container">
+<br>
 <a href="{{ site.baseurl }}/#table-of-contents" class="waves-effect waves-cyan btn-large darken-2">Back</a>
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
