--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: default
 <br>
 <a href="{{ site.baseurl }}/#table-of-contents" class="waves-effect waves-cyan btn-large darken-2">Back</a>
   <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
+    <span class="post-title">{{ page.title }}</span>
     <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
   </header>
 
