--- a/css/style.scss
+++ b/css/style.scss
@@ -20,29 +20,29 @@ html * {
 
 h1 {
 	@extend h1;
-	font-size: 3.56rem;
+	font-size: 2.92rem;
 }
 
 h2 {
 	@extend h2;
-	font-size: 2.92rem;
+	font-size: 2.28rem;
 }
 
 h3 {
   	@extend h3;
-  	font-size: 2.28rem; }
+  	font-size: 1.64rem; }
 
 h4 {
 	@extend h4;
-	font-size: 1.64rem; }
+	font-size: 1rem; }
 
 h5 {
 	@extend h5;
-	font-size: 1rem; }
+	font-size: 0.6rem; }
 
 h6 {
 	@extend h6;
-	font-size: 0.6rem; }
+	font-size: 0.2rem; }
 
 .icon-block {
   padding: 0 15px;
@@ -158,11 +158,13 @@ h6 {
 
 .post-header {
 	margin: 10em 0 0 0;
+	text-align: center;
 }
 
 .post-title {
-	text-align: center;
+	@extend h1;
 	font-family: $post-font;
+	font-size: 3.56rem;
 }
 
 .post-meta {
