--- a/css/style.css
+++ b/css/style.css
@@ -8403,6 +8403,29 @@ button.picker__today:focus, button.picker__clear:focus, button.picker__close:foc
 @media (min-height: 40.125em) {
   .picker--time .picker__box {
     margin-bottom: 5em; } }
+@font-face {
+  font-family: 'Code Pro Demo';
+  src: url("../font/code-pro-demo/Code_Pro_Demo.otf") format("opentype"); }
+@font-face {
+  font-family: 'CMU Serif';
+  src: url("../font/cmu-serif/cmunrm.ttf");
+  font-weight: normal;
+  font-style: normal; }
+@font-face {
+  font-family: 'CMU Serif';
+  src: url("../font/cmu-serif/cmunti.ttf");
+  font-weight: normal;
+  font-style: italic; }
+@font-face {
+  font-family: 'CMU Serif';
+  src: url("../font/cmu-serif/cmunbx.ttf");
+  font-weight: bold;
+  font-style: normal; }
+@font-face {
+  font-family: 'CMU Serif';
+  src: url("../font/cmu-serif/cmunbi.ttf");
+  font-weight: bold;
+  font-style: italic; }
 html * {
   font-family: "CMU Serif"; }
 
