--- a/_includes/table_of_contents.html
+++ b/_includes/table_of_contents.html
@@ -1,30 +1,40 @@
 {% assign chapter_titles = site.categories | sort %}
 
-<h2>RUCS</h2>
+<h2 class="brand-logo">RUCS</h2>
 <div class="height-fix">
   <div class="row cyan darken-2">
     <div class="marginless-col col m4 l3 hide-on-small-and-down">
       <div class="marginless-collection collection">
 
+        {% assign i = 1 %}
+
         {% for chapter in chapter_titles %}
 
         {% if forloop.first == true %}
 
-        <a href="#{{ chapter[0] | replace: ' ', '-' }}" class="waves-effect waves-light collection-item active">
-          <span class="toc-enum">Chapter {{ forloop.index }}</span></br>
+        <a href="#{{ chapter[0] | replace: ' ', '-'}}" class="waves-effect waves-light collection-item active">
+          <span class="toc-enum">Chapter {{ i }}</span></br>
           <span class="toc-title">{{ chapter[0] | capitalize }}</span>
         </a>
 
+        {% elsif chapter[0] == 'profiles and interviews'%}
+            {% assign i = i | minus: 1 %}
         {% else %}
 
-        <a href="#{{ chapter[0] | replace: ' ', '-' }}" class="waves-effect waves-light collection-item">
-          <span class="toc-enum">Chapter {{ forloop.index }}</span></br>
+        <a href="#{{ chapter[0] | replace: ' ', '-'}}" class="waves-effect waves-light collection-item">
+          <span class="toc-enum">Chapter {{ i }}</span></br>
           <span class="toc-title">{{ chapter[0] | capitalize }}</span>
         </a>
 
         {% endif %}
 
+        {% assign i = i | plus: 1 %}
+
         {% endfor %}
+
+        <a href="#profiles-and-interviews" class="waves-effect waves-light collection-item">
+          <span class="toc-title">Profiles/Interviews</span>
+        </a>
 
       </div>
     </div>
@@ -35,21 +45,24 @@
         {% for chapter in chapter_titles %}
           {% if forloop.first == true %}
             <li>
-              <div class="collapsible-header active">{{ chapter[0] }}</div>
+              <div class="collapsible-header active">{{ chapter[0] | capitalize }}</div>
               <div class="collapsible-body"></div>
             </li>
-
           {% else %}
             <li>
-              <div class="collapsible-header">{{ chapter[0] }}</div>
+              <div class="collapsible-header">{{ chapter[0] | capitalize }}</div>
               <div class="collapsible-body"></div>
             </li>
           {% endif %}
         {% endfor %}
+            <li>
+              <div class="collapsible-header">Profiles/Interviews</div>
+              <div class="collapsible-body"></div>
+            </li>
       </ul>
     </div>
 
-    <div class="marginless-col col s12 m8 l9 height-fix" style="height:413px; overflow: scroll" id="toc-content-wrapper">
+    <div class="marginless-col col s12 m8 l9 height-fix" id="toc-content-wrapper">
       <div class="toc-content height-fix" id="toc-content">
 
         {% for chapter in site.categories %}
