--- a/_includes/foreword.html
+++ b/_includes/foreword.html
@@ -3,8 +3,8 @@
 
 <p>This inaugural issue was made possible by dint of a tremendous effort from faculty and students alike. It was completed with great haste - its release coming barely four months after its humble beginnings - and its success is a testament to the quality of its contributors' work and its fastidious staff.</p>
 
-<p>In particular, this review would not have materialized if not for these following individuals. They have my deepest thanks and eternal gratitude. Paul Gries and Marsha Chechik: for breathing life into a fledgling idea. Diane Horton: for bolstering this project during its tremulous start. Nina Haikara: for promoting this review like none other could have. Courtney Mogavero: for the amazing event at Google Toronto. Leanne Dawkins: for answering my incessant questions with indefatigable enthusiasm.</p>
+<p>In particular, this review would not have materialized if not for these following individuals. They have my deepest thanks and eternal gratitude. Leanne Dawkins: for answering my incessant questions with indefatigable enthusiasm. Paul Gries and Marsha Chechik: for breathing life into a fledgling idea. Diane Horton: for bolstering this project during its tremulous start. Nina Haikara: for promoting this review like none other could have. Courtney Mogavero: for the amazing event at Google Toronto. </p>
 
-<p>Sam Toueg: for your sage advice, your unwavering support, and your humor - I could not have asked for more and am forever in your debt. Jaren, Julia, Muhammad, and Sara: for the passion you brought during even the most difficult of times, and for your brilliance and infinite patience, of which I am in awe. It has been a pleasure.</p>
+<p>Sam Toueg: for your sage advice, your unwavering support, and your humor - I could not have asked for more. Jaren, Julia, Muhammad, and Sara: for the passion you brought during even the most difficult of times, and for your brilliance and infinite patience, of which I am in awe. It has been a pleasure.</p>
 
 <p>Kawin Ethayarajh<br/><em>Founder & Editor-in-Chief</em>, RUCS</p>
